--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,11 +1,11 @@
-# name: Workflow to Node using Snyk
-# on: push
-# jobs:
-#   security:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@master
-#       - name: Run Snyk to check for vulnerabilities
-#         uses: snyk/actions/node@master
-#         env:
-#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+name: Workflow to Node using Snyk
+on: push
+jobs:
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
