--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "crypto-js": "^4.1.1",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
+    "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -48,7 +49,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
+    "typeorm-extension": "^2.2.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
