--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.5",
+    "@nestjs/throttler": "^3.1.0",
     "@nestjs/typeorm": "9.0.1",
-    "@solana-suite/core": "0.3.12",
-    "@solana-suite/nft": "0.3.12",
-    "@solana-suite/shared": "0.3.12",
+    "@solana-suite/core": "0.4.0",
+    "@solana-suite/nft": "0.4.0",
+    "@solana-suite/shared": "0.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.5",
