--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "csurf": "^1.11.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.8.0",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -52,7 +53,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.9",
-    "typeorm-extension": "^2.2.11"
+    "typeorm-extension": "^2.2.11",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
