--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "csurf": "^1.11.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
-    "nest-winston": "^1.8.0",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -54,7 +53,8 @@
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.9",
     "typeorm-extension": "^2.2.11",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
