--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mysql2": "^2.3.3",
     "node-rsa": "^1.1.1",
