--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "csurf": "^1.11.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
