--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.5",
     "@types/supertest": "^2.0.11",
