--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
     "typeorm-extension": "^2.2.11",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
