--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
+    "helmet": "^6.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "multer": "^1.4.5-lts.1",
