typeorm seeding script add

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "migration:create": "npx typeorm migration:create src/migration",
     "migration:generate": "npx typeorm-ts-node-commonjs migration:generate src/migration/updateTable -d src/data-source.ts",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "db:create": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:create",
+    "db:drop": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js db:drop",
+    "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
