--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/throttler": "^3.1.0",
     "@nestjs/typeorm": "9.0.1",
+    "@sendgrid/mail": "^7.7.0",
     "@solana-suite/core": "0.5.4",
     "@solana-suite/nft": "0.5.4",
     "@solana-suite/shared": "0.5.4",
