--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@solana-suite/core": "0.6.5",
     "@solana-suite/nft": "0.6.5",
     "@solana-suite/shared": "0.6.5",
+    "aws-sdk": "^2.1456.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.5",
