--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@nestjs/throttler": "^5.1.0",
     "@nestjs/typeorm": "10.0.1",
     "@sendgrid/mail": "^7.7.0",
-    "@solana-suite/core": "0.6.8",
-    "@solana-suite/nft": "0.6.8",
-    "@solana-suite/shared": "0.6.8",
+    "@solana-suite/airdrop": "0.7.1",
+    "@solana-suite/compressed-nft": "0.7.1",
+    "@solana-suite/config": "0.7.1",
+    "@solana-suite/memo": "0.7.1",
+    "@solana-suite/regular-nft": "0.7.1",
+    "@solana-suite/spl-token": "0.7.1",
     "aws-sdk": "^2.1518.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
