--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "10.0.1",
     "@sendgrid/mail": "^8.1.0",
-    "@solana-suite/airdrop": "0.7.1",
-    "@solana-suite/compressed-nft": "0.7.1",
+    "@solana-suite/airdrop": "0.7.2",
+    "@solana-suite/compressed-nft": "0.7.2",
     "@solana-suite/config": "0.7.2",
-    "@solana-suite/memo": "0.7.1",
-    "@solana-suite/multisig": "0.7.1",
+    "@solana-suite/memo": "0.7.2",
+    "@solana-suite/multisig": "0.7.2",
     "@solana-suite/regular-nft": "0.7.2",
+    "@solana-suite/sol-native": "0.7.2",
     "@solana-suite/spl-token": "0.7.2",
     "aws-sdk": "^2.1529.0",
     "class-transformer": "^0.5.1",
