--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "10.0.1",
     "@sendgrid/mail": "^8.1.0",
-    "@solana-suite/airdrop": "0.7.2",
-    "@solana-suite/compressed-nft": "0.7.2",
-    "@solana-suite/config": "0.7.2",
-    "@solana-suite/memo": "0.7.2",
-    "@solana-suite/multisig": "0.7.2",
-    "@solana-suite/regular-nft": "0.7.2",
-    "@solana-suite/sol-native": "0.7.2",
-    "@solana-suite/spl-token": "0.7.2",
+    "@solana-suite/airdrop": "0.7.3",
+    "@solana-suite/compressed-nft": "0.7.3",
+    "@solana-suite/config": "0.7.3",
+    "@solana-suite/memo": "0.7.3",
+    "@solana-suite/multisig": "0.7.3",
+    "@solana-suite/regular-nft": "0.7.3",
+    "@solana-suite/sol-native": "0.7.3",
+    "@solana-suite/spl-token": "0.7.3",
+    "@solana-suite/utils": "0.7.3",
     "aws-sdk": "^2.1548.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
