--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/typeorm": "10.0.1",
     "@sendgrid/mail": "^8.1.0",
